--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "stripe": "^7.13.0"
   },
   "scripts": {
-    "dev": "nodemon server-off-netlify/api.js",
-    "build": "./node_modules/.bin/netlify-lambda build server"
+    "dev": "nodemon server-off-netlify/api.js"
   },
   "repository": {
     "type": "git",
