--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "stripe": "^7.13.0"
   },
   "scripts": {
-    "dev": "nodemon server-off-netlify/api.js"
+    "dev": "nodemon server-off-netlify/api.js",
+    "build": "./node_modules/.bin/netlify-lambda build server"
   },
   "repository": {
     "type": "git",
